# restaurant-picker

./: PLAN.md  main.py  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.json
api/: index.py  main.py
api/static/: style.css
api/templates/: index.html
data/: countries.json
static/: style.css
